# horical

./: .gitlab-ci.yml  Cargo.toml  README.md  horical.conkyrc
.github/workflows/: rust.yml
src/: main.rs
